[project]
name = "mcp-se-wikipedia"
version = "0.1.0"
description = "Wikipedia Simple English MCP Server - Prioritizes Simple English Wikipedia with fallback to regular English"
requires-python = ">=3.12"
dependencies = ["mcp>=1.9.4", "wikipedia>=1.4.0"]

[project.scripts]
mcp-se-wikipedia = "main:cli"
